Design for header component

--- a/src/index.css
+++ b/src/index.css
@@ -15,3 +15,8 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
+
+@font-face {
+  font-family: "Chomsky";
+  src: local("Chomsky"), url(./fonts/Chomsky.otf) format("truetype");
+}
